--- a/public/games/snake-the-dots/index.html
+++ b/public/games/snake-the-dots/index.html
@@ -13,13 +13,11 @@
   
   <title>Snake The Dots | Codescapade</title>
   
-    <script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/stub.js"></script><script type="text/javascript">
+    <script type="text/javascript">
 var _iub = _iub || [];
-_iub.csConfiguration = {"lang":"en","siteId":1652138,"enableCMP":true,"newConsentAtVendorListUpdate":0,"cookiePolicyId":41964441, "banner":{ "acceptButtonDisplay":true,"customizeButtonDisplay":true,"position":"float-top-center","acceptButtonColor":"#47c2ff","acceptButtonCaptionColor":"white","customizeButtonColor":"#50D7A4","customizeButtonCaptionColor":"white","textColor":"black","backgroundColor":"#dedede" }};
+_iub.csConfiguration = {"lang":"en","siteId":1652138,"localConsentDomain":"codescapade.github.io","cookiePolicyId":41964441, "banner":{ "acceptButtonDisplay":true,"customizeButtonDisplay":true,"acceptButtonColor":"#47c2ff","acceptButtonCaptionColor":"white","customizeButtonColor":"#50D7A4","customizeButtonCaptionColor":"white","position":"float-top-center","textColor":"black","backgroundColor":"#dedede" }};
 </script><script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
   
-  
-  <script src="../../js/small.js"></script>
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
   <body>
