--- a/src/template.html
+++ b/src/template.html
@@ -23,6 +23,10 @@
 	<!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
 	%sapper.head%
+	<!-- <script type="text/javascript">
+	var _iub = _iub || [];
+	_iub.csConfiguration = {"lang":"en","siteId":1652138,"localConsentDomain":"codescapade.github.io","cookiePolicyId":41964441, "banner":{ "acceptButtonDisplay":true,"customizeButtonDisplay":true,"acceptButtonColor":"#47c2ff","acceptButtonCaptionColor":"white","customizeButtonColor":"#50D7A4","customizeButtonCaptionColor":"white","position":"float-top-center","textColor":"black","backgroundColor":"#dedede" }};
+	</script><script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script> -->
 </head>
 <body>
 	<!-- The application will be rendered inside this element,
